# bop-modeling-data-airflow

./: hello.py  pyproject.toml  tree
bop_airflow/: __init__.py  config.yml  dag.py
bop_airflow/src/: __init__.py  config.py  dbt_run_operator.py  logger.py
bop_modeling_data_airflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
