[project]
name = "bop-modeling-data-airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=2.10.4",
    "apache-airflow-providers-snowflake>=6.0.0",
    "dbt-core>=1.9.1",
    "dbt-snowflake>=1.9.0",
]
